--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = "Pure binary arithmetic operations without decimal conversion"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "SFR0815", email = ""}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -45,10 +45,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/YOUR_USERNAME/binary_calculator"
-Documentation = "https://YOUR_USERNAME.github.io/binary_calculator"
-Repository = "https://github.com/YOUR_USERNAME/binary_calculator"
-"Bug Tracker" = "https://github.com/YOUR_USERNAME/binary_calculator/issues"
+Homepage = "https://github.com/SFR0815/binary_calculator"
+Documentation = "https://SFR0815.github.io/binary_calculator"
+Repository = "https://github.com/SFR0815/binary_calculator"
+"Bug Tracker" = "https://github.com/SFR0815/binary_calculator/issues"
 
 [project.scripts]
 binary-calc-examples = "examples.example:main"
